--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,11 @@ a, a:hover {
     color: inherit;
     text-decoration: none;
 }
+
+.carousel-caption {
+    background-color: rgba(0,0,0,0.5)
+}
+
+.carousel {
+    border: solid #5637DD
+}
